--- a/simple.html
+++ b/simple.html
@@ -22,6 +22,7 @@
 		</p>
 	</main>
 	<footer class="container">
+		<p>&copy; 2014 Git Training, all rights reserved.</p>
 	</footer>
 </body>
 </html>
