--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Copyright 2014 Git.Training
 -->
 <head>
-	<title> Lots of trouble in a little repo </title>
+	<title> Updating title for stash example </title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,6 +17,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
+			Adding more important content here.
 			Just stuff for now
 			Not sure if we should replace this or not
 		</p>
